<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shipeer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">1530478660527480</string>
    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="rounded">See Rounded</string>
    <string name="squared">See Squared</string>
    <string name="search_trunk">Buscar maletero</string>
    <string name="search">Buscar</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <string name="from">De</string>
    <string name="to">A</string>
    <string name="title_activity_user_edit_profile">UserEditProfileActivity</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="phone">Móvil</string>
    <string name="modify_profile_picture">Modificar foto</string>
    <string name="save">Guardar</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="saved">Guardado!</string>
    <string name="publish_trip">Publicar viaje</string>
    <string name="my_trips">Mis viajes</string>
    <string name="title_activity_publish_trip">PublishTripActivity</string>
    <string name="contin">Siguiente</string>
    <string name="time">Hora:</string>
    <string name="small">Pequeño</string>
    <string name="medium">Mediano</string>
    <string name="big">Grande</string>
    <string name="comment">Comentario</string>
    <string name="missing_info">Faltan datos en la búsqueda</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="fb_login">Entrar con Facebook</string>
    <string name="email_log_in">Iniciar sesión con email</string>
    <string name="register"><u>¿Aún no estas registrado?</u></string>
    <string name="password">Contraseña</string>
    <string name="birthday">Cumpleaños</string>
    <string name="finish_register">Registrarse</string>
    <string name="sign_in">Iniciar sesion</string>
    <string name="missing_email">Falta el email</string>
    <string name="missing_phone">Falta el móvil</string>
    <string name="missing_surname">Faltan los apellidos</string>
    <string name="missing_name">Falta el nombre</string>
    <string name="missing_password">Falta la contraseña</string>
    <string name="missing_birthday">Falta el cumpleaños</string>
    <string name="incorrect_email">Email incorrecto</string>
    <string name="connection_problem">Ha habido un problema con la conexión</string>
    <string name="register_succed">Usuario creado</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_login">Login</string>
    <string name="choose_profile_pic">Elegir una foto de perfil</string>
    <string name="booking">Reservar</string>
    <string name="extra_big">Extra grande</string>
    <string name="google_plus_login">Entrar con Google Plus</string>
    <string name="no_results">No se ha encontrado ningún viaje</string>
    <string name="no_internet_error">No hay conexión a Internet</string>
    <string name="facebook_loged">Facebook validado</string>
    <string name="google_plus_loged">Google Plus validado</string>
    <string name="add_fb_validation">Añadir Facebook</string>
    <string name="contact">Contactar</string>
    <string name="go_and_back">Ida y vuelta</string>
    <string name="departureDate">Fecha:</string>
    <string name="date_selection">Selecciona la fecha</string>
    <string name="monday">Lunes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="tuesday">Martes</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="of">de</string>
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="back">Vuelta:</string>
    <string name="go">Ida:</string>
    <string name="email_or_password_incorrect">Email o contraseña incorrecto</string>
    <string name="no_phone">No has puesto tu móvil</string>
    <string name="no_email">No has puesto tu email</string>
    <string name="trip_created">Viaje creado correctamente</string>
    <string name="upgrade_app">Actualización</string>
    <string name="upgrade_app_content">Hay una nueva actualización disponible</string>
    <string name="download">Descargar</string>
    <string name="email_example">tu@email.com</string>
    <string name="simple_trip">Viaje simple</string>
    <string name="recurrent_trip">Viaje habitual</string>
    <string name="user_already_registered">Ya hay un usuario con este email!</string>
    <string name="bad_request">Petición denegada</string>
    <string name="no_name">Sin nombre</string>
    <string name="no_trips_created">No has creado ningún viaje aún...</string>
    <string name="fromX">Desde</string>
    <string name="toX">Hasta</string>
    <string name="title_activity_edit_own_trip">EditOwnTripActivity</string>
    <string name="edit_trip">Modificar Viaje</string>
    <string name="delete_trip">Eliminar viaje</string>
    <string name="confirm_delete_trip">¿Estas seguro de que quieres eliminar este viaje?</string>
    <string name="delete">Eliminar</string>
    <string name="simple_go_trip">Viaje de Ida</string>
    <string name="simple_go_back_trip">Viaje de Ida y Vuelta</string>
    <string name="recurrent_go_trip">Viaje habitual de Ida</string>
    <string name="recurrent_go_back_trip">Viaje habitual de Ida y Vuelta</string>
    <string name="past_trip">Viaje pasado</string>
    <string name="call">Llamar</string>
    <string name="share_trunk_question">¿Compartimos maletero?</string>
    <string name="on_boarding_0">La primera red de coches particulares para mensajería</string>
    <string name="on_boarding_1">¡No viajes con el maletero vacío! Ahora con shipeer puedes llenarlo y compartir tus gastos de viaje</string>
    <string name="on_boarding_2">Paga menos por tus envíos y ayuda a otros a compartir sus gastos de viaje</string>
    <string name="on_boarding_3">Utiliza nuestro buscador para encontrar un conductor que transporte tus cosas</string>
    <string name="before">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="saving_trip">Guardando viaje...</string>
    <string name="creating_trip">Creando viaje...</string>
    <string name="publish_your_trip">Publica tu viaje</string>
    <string name="save_money_sending">Ahorra enviando</string>
    <string name="search_a_driver">Busca un conductor</string>
    <string name="next_arrow">Siguiente ></string>
    <string name="publish_trip_error">Ha habido un error al publicar el viaje</string>
    <string name="error_delete_trip">No se pudo borrar el viaje</string>
    <string name="send_whatsapp">WhatsApp</string>
    <string name="add_contact">Añadir contacto</string>
    <string name="shipeer">Shipeer</string>

</resources>
