<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_price_comment_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="52dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/price_small_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/small" />

                <discreteSeekBar.DiscreteSeekBar
                    android:id="@+id/price_small_discreteSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_small_textView"
                    android:layout_centerHorizontal="true"
                    app:dsb_progressColor="@color/shipeer_kazan"
                    app:dsb_indicatorColor="@color/shipeer_kazan"
                    app:dsb_min="0"
                    app:dsb_max="60"
                    app:dsb_value="5"/>

                <TextView
                    android:id="@+id/price_medium_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_small_discreteSeekBar"
                    android:text="@string/medium" />

                <discreteSeekBar.DiscreteSeekBar
                    android:id="@+id/price_medium_discreteSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_medium_textView"
                    android:layout_centerHorizontal="true"
                    app:dsb_progressColor="@color/shipeer_kazan"
                    app:dsb_indicatorColor="@color/shipeer_kazan"
                    app:dsb_min="0"
                    app:dsb_max="60"
                    app:dsb_value="12"/>

                <TextView
                    android:id="@+id/price_big_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_medium_discreteSeekBar"
                    android:text="@string/big" />

                <discreteSeekBar.DiscreteSeekBar
                    android:id="@+id/price_big_discreteSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_big_textView"
                    android:layout_centerHorizontal="true"
                    app:dsb_progressColor="@color/shipeer_kazan"
                    app:dsb_indicatorColor="@color/shipeer_kazan"
                    app:dsb_min="0"
                    app:dsb_max="60"
                    app:dsb_value="24"/>

                <TextView
                    android:id="@+id/price_extra_big_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_big_discreteSeekBar"
                    android:text="@string/extra_big" />

                <discreteSeekBar.DiscreteSeekBar
                    android:id="@+id/price_extra_big_discreteSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_extra_big_textView"
                    android:layout_centerHorizontal="true"
                    app:dsb_progressColor="@color/shipeer_kazan"
                    app:dsb_indicatorColor="@color/shipeer_kazan"
                    app:dsb_min="0"
                    app:dsb_max="60"
                    app:dsb_value="40"/>

                <TextView
                    android:id="@+id/comment_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price_extra_big_discreteSeekBar"
                    android:layout_marginTop="10dp"
                    android:text="@string/comment" />

                <EditText
                    android:id="@+id/comment_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/comment_textView" />

                <TextView
                    android:id="@+id/email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_below="@+id/comment_editText"
                    android:layout_marginTop="6dp"/>

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_textView"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_example"/>

                <TextView
                    android:id="@+id/phone_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_below="@+id/email_editText"
                    android:layout_marginTop="6dp"/>

                <EditText
                    android:id="@+id/phone_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_textView"
                    android:inputType="phone"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/publishNext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/shipeer_kazan">

        <ProgressBar
            android:id="@+id/async_progress_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/publish_next_textView"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/publish_next_textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/publish_trip"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>