<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shipeer.app.OnBoardingFragment">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/onboarding_0"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/on_boarding_icon_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipeer"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/on_boarding_text_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/on_boarding_icon_textView"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/on_boarding_0"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>


    <RelativeLayout
        android:id="@+id/on_boarding_next_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="#55000000">

        <TextView
            android:id="@+id/on_boarding_next_textView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/next_arrow"
            android:gravity="center"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</RelativeLayout>
