<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo_letra_fondo_claro"/>


    <ProgressBar
        android:id="@+id/async_load_progressBar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fb_login_button"
            android:layout_width="249dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="Holaa"
            android:scaleType="centerInside"
            fb:login_text="@string/fb_login"
            fb:logout_text="@string/log_out" />

        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/google_plus_login_button"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fb_login_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>-->

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="249dp"
            android:layout_height="45dp"
            android:text="@string/email_log_in"
            android:layout_below="@+id/fb_login_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/email_login_button"
            android:paddingTop="10dp"
            android:layout_alignRight="@+id/email_login_button"
            android:layout_alignEnd="@+id/email_login_button" />
    </RelativeLayout>

    <!-- <VideoView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/player"
        android:background="@color/calendar_selected_day_bg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/> -->

</RelativeLayout>
