<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/travel_price_comment_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <RelativeLayout
        android:id="@+id/top_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <!-- Action-bar looking view -->
        <include layout="@layout/custom_second_action_bar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_action_bar">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/price_small_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/small" />

            <SeekBar
                android:id="@+id/price_small_seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_small_textView"
                android:layout_centerHorizontal="true"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_background" />

            <TextView
                android:id="@+id/price_medium_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_small_seekBar"
                android:text="@string/medium" />

            <SeekBar
                android:id="@+id/price_medium_seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_medium_textView"
                android:layout_centerHorizontal="true"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_background" />

            <TextView
                android:id="@+id/price_big_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_medium_seekBar"
                android:text="@string/big" />

            <SeekBar
                android:id="@+id/price_big_seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_big_textView"
                android:layout_centerHorizontal="true"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_background" />

            <TextView
                android:id="@+id/comment_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_big_seekBar"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/comment_textView" />

        </RelativeLayout>

        <TextView
            android:id="@+id/publishNext"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/shipeer"
            android:gravity="center"
            android:text="@string/publish_travel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>