<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.shipeer.app.UserEditProfileActivity">

    <!-- Action-bar looking view -->
    <include layout="@layout/custom_second_action_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <!-- PROFILE PICTURE -->
            <RelativeLayout
                android:id="@+id/pic_relativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_picture_edit_circularImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignBaseline="@+id/more"
                    android:layout_margin="16dp"
                    android:src="@drawable/shipeer_logo" />

                <ProgressBar
                    android:id="@+id/profile_picture_progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_alignLeft="@+id/profile_picture_edit_circularImageView"
                    android:layout_alignTop="@+id/profile_picture_edit_circularImageView"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"/>

                <model.RippleView
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/profile_picture_circularimageview"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    ripple:rv_centered="false">

                    <Button
                        android:id="@+id/change_profile_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_profile_picture" />

                </model.RippleView>

            </RelativeLayout>

            <!-- NAME EDIT -->
            <RelativeLayout
                android:id="@+id/name_relativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pic_relativeLayout"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_below="@+id/name_textView" />
            </RelativeLayout>

            <!-- SURNAME EDIT -->
            <RelativeLayout
                android:id="@+id/surname_relativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_relativeLayout"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/surname_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/surname" />

                <EditText
                    android:id="@+id/surname_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_below="@+id/surname_textView" />
            </RelativeLayout>

            <!-- EMAIL EDIT -->
            <RelativeLayout
                android:id="@+id/email_relativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname_relativeLayout"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_textView"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>

            <!-- PHONE EDIT -->
            <RelativeLayout
                android:id="@+id/phone_relativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_relativeLayout"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/phone_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/phone_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_textView"
                    android:inputType="phone" />
            </RelativeLayout>

            <model.RippleView
                android:id="@+id/save_profile_edit_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_relativeLayout"
                android:layout_margin="5dp"
                ripple:rv_centered="false">

                <Button
                    android:id="@+id/save_profile_edit_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </model.RippleView>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
